LINQ sorguları ile bir Kategori panel sayfası tasarımı yapıldı ve böylelikle istatik bilgilerini görebiliiyoruz

--- a/MvcProject/MvcProject.csproj
+++ b/MvcProject/MvcProject.csproj
@@ -2290,6 +2290,7 @@
     <Content Include="Views\AdminCategory\Index.cshtml" />
     <Content Include="Views\AdminCategory\AddCategory.cshtml" />
     <Content Include="Views\AdminCategory\EditCategory.cshtml" />
+    <Content Include="Views\AdminCategory\CategoryPanel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
