--- a/MvcProject/MvcProject.csproj
+++ b/MvcProject/MvcProject.csproj
@@ -2312,6 +2312,9 @@
     <Content Include="Views\Message\Inbox.cshtml" />
     <Content Include="Views\Message\Sendbox.cshtml" />
     <Content Include="Views\Message\NewMessage.cshtml" />
+    <Content Include="Views\Message\Drafts.cshtml" />
+    <Content Include="Views\Message\Trash.cshtml" />
+    <Content Include="Views\Message\GetInboxMessageDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
