--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -117,6 +117,10 @@
     <Compile Include="Migrations\202507281711497_mig_contactadddate.Designer.cs">
       <DependentUpon>202507281711497_mig_contactadddate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202507291543213_mig_spamboxAdd.cs" />
+    <Compile Include="Migrations\202507291543213_mig_spamboxAdd.Designer.cs">
+      <DependentUpon>202507291543213_mig_spamboxAdd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -166,6 +170,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202507281711497_mig_contactadddate.resx">
       <DependentUpon>202507281711497_mig_contactadddate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202507291543213_mig_spamboxAdd.resx">
+      <DependentUpon>202507291543213_mig_spamboxAdd.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
